# reduce

./: LICENSE  reduce.cabal
docs/: Diagram1.dia  Diagram2.dia
src/Data/: Reduce.hs
test/: Spec.hs
